<resources>
    <string name="app_name">course eman </string>
    <string name="username"> Username </string>
    <string name="password"> Password </string>
    <string name="login"> Login Form </string>
    <string name="sports"> Favourite Sports </string>
    <string name="football"> Football </string>
    <string name="handball"> Handball</string>
    <string name="Basketball"> Basketball</string>
    <string name="gender"> Gender </string>
    <string name="male"> Male </string>
    <string name="female"> Female </string>
    <string name="register"> Register </string>
    <string name="hi"> Hi in second page </string>
    <string name="google"> Google </string>
    <string name="facebook"> Facebook </string>
    <string name="Lodin"> Login </string>
    <string name="go"> Go To Second Activity </string>
    <string name="exit"> Exit </string>
    <string name="mdialog"> Are You Sure You Want To Exit This App ? </string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>
    <string name="loginout"> Login Out </string>
</resources>