
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B009688"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/lf_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp">

    </TextView>
    <TextView
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/lf_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp">

    </TextView>
    <EditText
        android:id="@+id/username_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:text="kminchelle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/username_tv"

        app:layout_constraintBottom_toBottomOf="@id/username_tv">

    </EditText>
    <TextView
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/username_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp">

    </TextView>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0lelplR"
        android:inputType="numberPassword"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password_tv"
        app:layout_constraintBottom_toBottomOf="@id/password_tv">
    </EditText>

    <TextView
        android:id="@+id/fs_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/sports"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_tv">

    </TextView>

    <CheckBox
        android:id="@+id/football_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/football"
        app:layout_constraintStart_toStartOf="@id/fs_tv"
        app:layout_constraintTop_toBottomOf="@id/fs_tv">

    </CheckBox>

    <CheckBox
        android:id="@+id/handball_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handball"
        app:layout_constraintStart_toEndOf="@id/football_ck"
        app:layout_constraintTop_toBottomOf="@id/fs_tv"
        android:layout_marginStart="10dp">

    </CheckBox>
    <CheckBox
        android:id="@+id/basket_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Basketball"
        app:layout_constraintStart_toEndOf="@id/handball_ck"
        app:layout_constraintTop_toBottomOf="@id/fs_tv"
        android:layout_marginStart="10dp">

    </CheckBox>
    <TextView
        android:id="@+id/gender_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/football_ck"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp">
    </TextView>
    <RadioGroup
        android:id="@+id/gender_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/gender_ck"
        app:layout_constraintStart_toStartOf="@id/gender_ck"
        android:layout_marginStart="10dp">
    <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        />
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginStart="10dp"
            />
    </RadioGroup>
    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gender_rg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="#AB000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>